client - calendar - stage 0
